@@ -15,6 +15,7 @@
 Fixing bugs and filling some gaps in new features
 ** Added 🎅
 - ~dslide-action-kmacro~ now understands the =:keys= vector to be human readable keys, similar to those understood by ~kbd~
+- ~dslide-kmacro-transcribe-type~ defaults to =:keys= and can be set to =:events= if you encounter an issue (*which you should file*) with =:keys=.
 ** Changed 🧑‍🔧
 - ~dslide-action-kmacro~ old =:keys= has been renamed to =:events=.  It is a vector of non-human-readable events.
 ** Fixed 💩
